beginning the long and painful process to objectify code

--- a/js/makefile
+++ b/js/makefile
@@ -1,2 +1,2 @@
-bundle.js : firebase_control.js nscript.js
-	cat firebase_control.js nscript.js > bundle.js
+bundle.js : firebase_control.js nscript.js ./FrontEnd/forum.js
+	cat ./FrontEnd/forum.js firebase_control.js nscript.js > bundle.js
