--- a/js/makefile
+++ b/js/makefile
@@ -1,2 +1,7 @@
 bundle.js : firebase_control.js nscript.js ./FrontEnd/forum.js
-	cat ./FrontEnd/forum.js firebase_control.js ./FrontEnd/globals.js nscript.js > bundle.js
+	cat ./FrontEnd/forum.js\
+	       	firebase_control.js\
+	       	./FrontEnd/globals.js\
+		./notif.js\
+	       	nscript.js\
+	       	> bundle.js
