so now it can encrypt and backup!

--- a/js/makefile
+++ b/js/makefile
@@ -1,7 +1,10 @@
 bundle.js : firebase_control.js nscript.js ./FrontEnd/forum.js
-	cat ./FrontEnd/forum.js\
+	cat \
+		./FrontEnd/forum.js\
 	       	firebase_control.js\
 	       	./FrontEnd/globals.js\
 		./notif.js\
+		./encryptor.js\
+		./backup.js\
 	       	nscript.js\
 	       	> bundle.js
